--- a/index.html
+++ b/index.html
@@ -36,13 +36,15 @@
             <div class="col-1-of-2">
                 <h3 class="heading-tertiary u-margin-bottom-small">You're going to fall in love with nature</h3>
                 <p class="paragraph">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. At beatae consectetur eligendi facere quibusdam recusandae reprehenderit voluptatibus. Accusamus dicta dolores ducimus maiores modi, officia? Cumque doloribus esse harum laboriosam odit? Dolo
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. At beatae consectetur eligendi facere quibusdam recusandae reprehenderit voluptatibus. Accusamus dicta dolores ducimus maiores modi, officia? Cumque doloribus esse harum laboriosam odit?
                 </p>
 
                 <h3 class="heading-tertiary u-margin-bottom-small">Live adventures like you never have before</h3>
                 <p class="paragraph">
-                   Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi beatae, commodi expedita in laudantium quas reiciendis repellendus suscipit vitae voluptates. Earum et eveniet ex illum minima numquam officia quisquam reprehenderit.
+                   Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi beatae, commodi expedita in laudantium quas reiciendis repellendus suscipit.
                 </p>
+
+                <a href="#" class="btn-text">Learn more &rarr;</a>
 
 
             </div>
