--- a/index.html
+++ b/index.html
@@ -36,12 +36,15 @@
             <div class="col-1-of-2">
                 <h3 class="heading-tertiary u-margin-bottom-small">You're going to fall in love with nature</h3>
                 <p class="paragraph">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. At beatae consectetur eligendi facere quibusdam recusandae reprehenderit voluptatibus. Accusamus dicta dolores ducimus maiores modi, officia? Cumque doloribus esse harum laboriosam odit?
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. At beatae consectetur eligendi facere
+                    quibusdam recusandae reprehenderit voluptatibus. Accusamus dicta dolores ducimus maiores modi,
+                    officia? Cumque doloribus esse harum laboriosam odit?
                 </p>
 
                 <h3 class="heading-tertiary u-margin-bottom-small">Live adventures like you never have before</h3>
                 <p class="paragraph">
-                   Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi beatae, commodi expedita in laudantium quas reiciendis repellendus suscipit.
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi beatae, commodi expedita in
+                    laudantium quas reiciendis repellendus suscipit.
                 </p>
 
                 <a href="#" class="btn-text">Learn more &rarr;</a>
@@ -66,7 +69,8 @@
                     <i class="feature-box__icon icon-basic-world"></i>
                     <h3 class="heading-tertiary u-margin-bottom-small">Explore the world</h3>
                     <p class="feature-box__text">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi beatae, commodi expedita in laudantium quas reiciendis repellendus suscipit.
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi beatae, commodi expedita in
+                        laudantium quas reiciendis repellendus suscipit.
                     </p>
                 </div>
             </div>
@@ -76,7 +80,8 @@
                     <i class="feature-box__icon icon-basic-compass"></i>
                     <h3 class="heading-tertiary u-margin-bottom-small">Meet nature</h3>
                     <p class="feature-box__text">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi beatae, commodi expedita in laudantium quas reiciendis repellendus suscipit.
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi beatae, commodi expedita in
+                        laudantium quas reiciendis repellendus suscipit.
                     </p>
                 </div>
             </div>
@@ -86,7 +91,8 @@
                     <i class="feature-box__icon icon-basic-map"></i>
                     <h3 class="heading-tertiary u-margin-bottom-small">Find your way</h3>
                     <p class="feature-box__text">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi beatae, commodi expedita in laudantium quas reiciendis repellendus suscipit.
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi beatae, commodi expedita in
+                        laudantium quas reiciendis repellendus suscipit.
                     </p>
                 </div>
             </div>
@@ -96,13 +102,119 @@
                     <i class="feature-box__icon icon-basic-heart"></i>
                     <h3 class="heading-tertiary u-margin-bottom-small">Live healthier life</h3>
                     <p class="feature-box__text">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi beatae, commodi expedita in laudantium quas reiciendis repellendus suscipit.
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi beatae, commodi expedita in
+                        laudantium quas reiciendis repellendus suscipit.
                     </p>
                 </div>
             </div>
 
         </div>
     </section>
+
+    <section class="section-tours">
+        <div class="u-center-text u-margin-bottom-big">
+            <h2 class="heading-secondary">
+                Most popular tours
+            </h2>
+        </div>
+        <div class="row">
+            <div class="col-1-of-3">
+                <div class="card">
+                    <div class="card__side card__side--front">
+                        <div class="card__picture card__picture--1">
+                            &nbsp;
+                        </div>
+                        <h4 class="card__heading">
+                            <span class="card__heading-span card__heading-span--1">The Sea Explorer</span>
+                        </h4>
+                        <div class="card__details">
+                            <ul>
+                                <li>3 day tour</li>
+                                <li>Up to 30 people</li>
+                                <li>2 tour guides</li>
+                                <li>Sleep in cozy hotels</li>
+                                <li>Difficulty: easy</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="card__side card__side--back card__side--back-1">
+                        <div class="card__cta">
+                            <div class="card__price-box">
+                                <p class="card__price-only">Only</p>
+                                <p class="card__price-value">$297</p>
+                            </div>
+                            <a href="#" class="btn btn--white">Book now!</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="col-1-of-3">
+                <div class="card">
+                    <div class="card__side card__side--front">
+                        <div class="card__picture card__picture--2">
+                            &nbsp;
+                        </div>
+                        <h4 class="card__heading">
+                            <span class="card__heading-span card__heading-span--2">The forest hiker</span>
+                        </h4>
+                        <div class="card__details">
+                            <ul>
+                                <li>7 day tour</li>
+                                <li>Up to 400 people</li>
+                                <li>6 tour guides</li>
+                                <li>Sleep in provided</li>
+                                <li>Difficulty: medium</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="card__side card__side--back card__side--back-2">
+                        <div class="card__cta">
+                            <div class="card__price-box">
+                                <p class="card__price-only">Only</p>
+                                <p class="card__price-value">$497</p>
+                            </div>
+                            <a href="#" class="btn btn--white">Book now!</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-1-of-3">
+                <div class="card">
+                    <div class="card__side card__side--front">
+                        <div class="card__picture card__picture--3">
+                            &nbsp;
+                        </div>
+                        <h4 class="card__heading">
+                            <span class="card__heading-span card__heading-span--3">The snow adventurer</span>
+                        </h4>
+                        <div class="card__details">
+                            <ul>
+                                <li>5 day tour</li>
+                                <li>Up to 15 people</li>
+                                <li>3 tour guides</li>
+                                <li>Sleep in provided tents</li>
+                                <li>Difficulty: hard</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="card__side card__side--back card__side--back-3">
+                        <div class="card__cta">
+                            <div class="card__price-box">
+                                <p class="card__price-only">Only</p>
+                                <p class="card__price-value">$897</p>
+                            </div>
+                            <a href="#" class="btn btn--white">Book now!</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </section>
+
 </main>
 
 <!--
